--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mrvotum?tab=repositories"
+    "url": "https://github.com/mrvotum/3-2_Matchers"
   },
   "keywords": [
     "Netology"
